--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^19.2.4",
     "@angular/platform-browser-dynamic": "^19.2.4",
     "@angular/router": "^19.2.4",
-    "@fullcalendar/angular": "^6.1.16",
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@swimlane/ngx-charts": "^22.0.0-alpha.1",
     "@tailwindcss/postcss": "^4.0.17",
     "chart.js": "^4.4.8",
