--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.4",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
