--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@tailwindcss/postcss": "^4.0.17",
     "chart.js": "^4.4.8",
     "d3": "^7.9.0",
+    "firebase": "^11.6.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -35,6 +37,7 @@
     "@angular-devkit/build-angular": "^19.2.4",
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.4",
+    "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
     "autoprefixer": "^10.4.21",
