--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "ag-grid-community": "^33.2.1",
     "chart.js": "^4.4.8",
     "d3": "^7.9.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.6.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
