--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.6.0",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
@@ -46,6 +47,7 @@
     "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
+    "@types/leaflet": "^1.9.17",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
